testsuite/tests/splice-imports/SI21.hs
{-# LANGUAGE TemplateHaskellQuotes #-}
{-# LANGUAGE NoMonomorphismRestriction #-}
{-# LANGUAGE ExplicitLevelImports #-}
module SI21 where

boo = 'a
